--- a/css/base_h5bp.css
+++ b/css/base_h5bp.css
@@ -215,10 +215,10 @@ textarea {
         text-shadow: none !important;
     }
 
-    a,
+ /*    a,
     a:visited {
         text-decoration: underline;
-    }
+    } */
 
     a[href]:after {
         content: " (" attr(href) ")";
